2009-07-23  Gordon Williams <gordon.williams@collabora.co.uk>

	This resolves 127320 - home screen panning gets stuck in middle
	* src/home/hd-home.c: Added lots of debug messages with a DRAG_DEBUG 
	  define. Fixed drag to middle of screen bug by ignoring motion events
	  (which clutter has delayed) after the stylus is released.

2009-07-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-volume-profile.c (hd_volume_profile_init): Add a
	profile_tracker_init() call, makes the notifications work.
	Fixes: NB#129227 

2009-07-23  Gordon Williams <gordon.williams@collabora.co.uk>

	This resolves 129404 - redrawing title bar text too often
	* src/home/hd-title-bar.c: Set visibility detection on individual
	  title bar elements, so that even when status area is being updated,
	  text and buttons can be left unrendered. Also had to explicitly set
	  the group size, as it appeared to be being set to 800x480 at some
	  point.

2009-07-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.66

2009-07-22  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added setting for disabling launch transition for NB#128881.
	Use X-App-Loading-Image=none in desktop file to disable.

	* src/launcher/hd-launcher.c:
	* src/launcher/hd-launcher.h:

2009-07-22  Laszlo Pere  <lpere@blumsoft.eu>

	Fixes: NB#121519 - A blank frame like window with out any title is 
	                   shown on the desktop.

	* src/mb/hd-comp-mgr.c: Handling the old leader that has followers
	  become a follower case.

2009-07-22  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Patch from Laszlo Pere for NB#123486.

	* src/home/hd-clutter-cache.c (hd_clutter_cache_get_real_texture):
	Recover from a broken theme by falling back to the default theme.

2009-07-21  Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#129084 - Transition from Call UI to Desktop not according to
	                   spec
